--- a/templates/report/report.hbs
+++ b/templates/report/report.hbs
@@ -7,7 +7,7 @@
 % This is a template based on https://github.com/amcrisan/TB-WGS-MicroReport
 % Please cite the associated publication when using this report for Cerebro
 
-\usepackage[letterpaper, margin=0.5in,headheight=77pt,top=3.5cm]{geometry}
+\usepackage[letterpaper, margin=0.5in,headheight=77pt,top=3.5cm,bottom=4.5cm,footskip=4cm]{geometry}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{hyperref}
@@ -22,7 +22,7 @@
 \usepackage{fontspec}
 \usepackage[title]{appendix}
 \usepackage{stix}
-
+\usepackage{ragged2e}
 \setmainfont{Lato}
 
 \hypersetup{
@@ -73,28 +73,36 @@
 
 \pagestyle{fancy}
 \fancyhf{}
-\lhead{\Large{\textbf{META-GP \\ CLINICAL REPORT} } \\ %ISO15189 reporting requirements stipulate that you provide "a clear, unambiguous identification of the examination including, where appropriate, the examination procedure"
+\lhead{\Large{\textbf{METAGENOMICS \\ CLINICAL REPORT} } \\ %ISO15189 reporting requirements stipulate that you provide "a clear, unambiguous identification of the examination including, where appropriate, the examination procedure"
 \normalsize{NOT FOR DIAGNOSTIC USE} }
 \chead{}
 \rhead{
-    \includegraphics[scale=0.3]{ {{ template.logo_path }} }
+    \includegraphics[scale=0.4]{ {{ template.logo_path }} }
     % \hspace{2mm}
     % \includegraphics[scale=0.25]{doherty.png}
 }
 \renewcommand{\headrulewidth}{0pt} % no line in header area
 
 
-
+{{!-- \phantom{Address: } --}}
 
 %--------
 % FOOTER
 %--------
 
+
+\renewcommand{\footrulewidth}{1pt}
+
 \lfoot{
-  \small Page \thepage\ of \pageref*{LastPage}
+  \scriptsize Page \thepage\ of \pageref*{LastPage}
 }
 
-\rfoot{\small Patient ID: {{ patient.header.patient_urn }} | Date: {{ patient.header.reporting_date }} | Location: {{ patient.header.reporting_location }} } %ISO15189 reporting standards require that patient identification and location occur on every page of the report, along with a 'Page X of Y' designation.
+\cfoot {
+  \vspace{-4cm}
+  \justifying\noindent{\small{\textbf{Disclaimer}: {{ template.legal.disclaimer }} } }
+}
+
+\rfoot{\scriptsize Patient ID: {{ patient.header.patient_urn }} | Collection Date: {{ patient.header.date_collected }} | Reporting Date: {{ patient.header.reporting_date }} | Location: {{ patient.header.reporting_location }} } %ISO15189 reporting standards require that patient identification and location occur on every page of the report, along with a 'Page X of Y' designation.
 
 %---------------
 % MAIN DOCUMENT
@@ -131,7 +139,7 @@ Laboratory Number &  {{ patient.header.laboratory_number }}          & Reporting
 \begin{reportSection}{Referral}
 \vspace{5mm}
 
-Thank you for referring your patient\textbf{ {{patient.header.patient_name}}, DOB: {{ patient.header.patient_dob }} }to the Metagenomic next-generation sequencing for improving infectious disease diagnostics and 
+Thank you for referring your patient \textbf{ {{patient.header.patient_name}}, DOB: {{ patient.header.patient_dob }} } to the Metagenomic next-generation sequencing for improving infectious disease diagnostics and 
 pathogen discovery clinical research project (MetaGP - HREC/74254/2021.110).
 
 \vspace{5mm}
@@ -175,29 +183,10 @@ Please refer to the appendices for details regarding the sequencing results.
 \vspace{3mm}
 \end{reportSection}
 
-\mbox{}
-\vfill
 
-\noindent{\scriptsize{\textbf{Disclaimer}: {{ template.legal.disclaimer }} } }
-
-%------------
-% CONFIDENCE
-%------------
-
-% \begin{reportSection}{Disclaimer}
-% \vspace{5mm}
-
-% \footnotesize{
-%   Disclaimer
-% }
-
-% \vspace{3mm}
-% \end{reportSection}
-% \vspace{5mm}
-
-%---------------
-% ACTIONS TAKEN
-%---------------
+%-----------------------
+% ADDITIONAL INFORMATION
+%-----------------------
 
 \newpage
 \begin{reportSection}{Contact}
@@ -210,7 +199,6 @@ For any further questions regarding these results, please contact:
 \vspace{1mm}
 \end{reportSection}
 \vspace{5mm}
-
 
 \begin{reportSection}{Comments}
 \vspace{3mm}
@@ -242,10 +230,6 @@ For any further questions regarding these results, please contact:
 \end{reportSection}
 \vspace{5mm}
 
-\mbox{}
-\vfill
-
-\noindent{\scriptsize{\textbf{Disclaimer}: {{ template.legal.disclaimer }} } }
 
 
 %-----------------------
@@ -254,6 +238,7 @@ For any further questions regarding these results, please contact:
 
 
 \newpage
+
 \begin{reportSection}{Authorisation}
 \vspace{5mm}
 
@@ -274,11 +259,20 @@ Your patient’s case and data were reviewed and discussed at a multi-disciplina
 {{/each}}
 
 \end{reportSection}
+\vspace{5mm}
 
-\mbox{}
-\vfill
 
-\noindent{\scriptsize{\textbf{Disclaimer}: {{ template.legal.disclaimer }} } }
+\begin{reportSection}{Issuing Laboratory}
+\vspace{3mm}
+\footnotesize{Issued by the Victorian Infectious Diseases Reference Laboratory (VIDRL), 792 Elizabeth St, Melbourne VIC 3004.}
+
+\vspace{3mm}
+
+\footnotesize{Report identification number with MetaGP: XXXX-XXXX-XXXX-XXXX}
+
+\end{reportSection}
+\vspace{5mm}
+
 
 %--------------
 %  APPENDICES
@@ -341,10 +335,7 @@ Sequencer                    &  {{ s.laboratory.header.sequencer }}    & Positiv
 \vspace{1mm}
 \end{reportSection}
 
-\mbox{}
-\vfill
 
-\noindent{\scriptsize{\textbf{Disclaimer}: {{ s.disclaimer }} } }
 
 %-------------------------
 % BIOINFORMATICS PIPELINE
@@ -385,11 +376,6 @@ Completed          & {{ s.bioinformatics.header.completed }}        & Taxonomy  
 {{ s.bioinformatics.comments }}
 \vspace{1mm}
 \end{reportSection}
-
-\mbox{}
-\vfill
-
-\noindent{\scriptsize{\textbf{Disclaimer}: {{ s.disclaimer }} } }
 
 
 %----------------------
@@ -451,10 +437,6 @@ Sample was reviewed and determined to be \textbf{negative}.
 \end{reportSection}
 
 
-\mbox{}
-\vfill
-
-\noindent{\scriptsize{\textbf{Disclaimer}: {{ s.disclaimer }} } }
 
 %---------------------
 % OTHER EVIDENCE PAGE
@@ -472,10 +454,6 @@ Sample was reviewed and determined to be \textbf{negative}.
 \end{reportSection}
 
 
-\mbox{}
-\vfill
-
-\noindent{\scriptsize{\textbf{Disclaimer}: {{ s.disclaimer }} } }
 
 {{/if}}
 
@@ -487,11 +465,6 @@ Sample was reviewed and determined to be \textbf{negative}.
   \newpage
   \section{Audit \normalsize{ ({{ s.sample_id }}) } }
   \label{sec:appendixC}
-
-  \mbox{}
-  \vfill
-
-  \noindent{\scriptsize{\textbf{Disclaimer}: {{ s.disclaimer }} } }
 
 {{/if}}
 
