chore(stack): add subdomain specs for multiple instance deployment; change template folder compose mounts

--- a/templates/report/report.hbs
+++ b/templates/report/report.hbs
@@ -219,7 +219,7 @@ Please refer to the appendices for details regarding the sequencing results.
 For any further questions regarding these results, please contact:
 
 \vspace{3mm}
-{{#if patient.result.contact}} \textbf{ {{ patient.result.contact }} } {{else}} \InlineFillableField{patient_result_contaxt}{10cm}{12pt} {{/if}}
+{{#if patient.result.contact}} {{ patient.result.contact }} {{else}} \InlineFillableField{patient_result_contact}{10cm}{12pt} {{/if}}
 
 \vspace{1mm}
 \end{reportSection}
