--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,3 +5,11 @@
 .md-logo[data-md-component=logo] {
     padding-top: 0.45rem;
 }
+.md-typeset {
+    font-size: 0.7rem;
+}
+
+.md-typeset code {
+
+    font-size: 0.69rem;
+}
