--- a/templates/email/verification.hbs
+++ b/templates/email/verification.hbs
@@ -7,7 +7,7 @@
                 <tr>
                     <td>
                         <p>Dear {{ name }},</p>
-                        <p>Welcome to the Meta-GP application for data management and reporting! {{ msg }}</p>
+                        <p>Welcome to the Meta-GP application for metagenomic sequencing and reporting. {{ msg }}</p>
                         <p>Please verify your account by clicking on the following link:</p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                             <tbody>
