--- a/templates/email/verification.hbs
+++ b/templates/email/verification.hbs
@@ -6,8 +6,7 @@
             <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                     <td>
-                        <p>Dear {{ name }},</p>
-                        <p>Welcome to the Meta-GP application for metagenomic sequencing and reporting. {{ msg }}</p>
+                        <p>Welcome to the MITIGATE application for clinical metagenomic diagnostics (Cerebro). {{ msg }}</p>
                         <p>Please verify your account by clicking on the following link:</p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                             <tbody>
@@ -26,8 +25,6 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <p>Best wishes,</p>
-                        <p>Eike</p>
                     </td>
                 </tr>
                 <tr>
